OS11SPRYKE-2094 - Old look scrollbar fix CZ [6.0] (#2430)
* OS11SPRYKE-2094 scrollbar fix

* scrollbar that old look cz fix

* scrollbar fix that old look

* scrollbar that old look cz fix

--- a/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/navigation-header/navigation-header.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/navigation-header/navigation-header.scss
@@ -8,6 +8,9 @@
         }
 
         &__list {
+            scrollbar-color: $setting-color-globusCZ-main-green white;
+            scrollbar-width: thin;
+
             ::-webkit-scrollbar {
                 width: rem(5);
                 background: $setting-color-white;
